--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Veshoz Village</title>
+  <title>Customar Login</title>
   <link href="style.css" rel="stylesheet">
 </head>
 <body>
@@ -27,5 +27,8 @@
       </div>
 
 
+
+    
+  
 </body>
 </html>
