--- a/index.html
+++ b/index.html
@@ -26,6 +26,52 @@
         
       </div>
 
+<div class="marq">
+  <marquee>Welcome to my Website</marquee>
+</div>
 
+<section class="container">
+  <h1 class="heading">Harbal Product</h1>
+  <div class="cont">
+    <a href="#"><img class="imeg" src="Moringa.png"></a>
+    <p class="name">Moringa Super Food</p>
+    <p class="price">325</p>
+    <span class="pack">100 gm</span>
+    <button class="additem"><a class="additema" href="#">Add To Cart</a></button>
+  </div>
+
+  <div class="cont">
+    <a href="#"><img class="imeg" src="Amloki.png"></a>
+    <p class="name">Amloki Powder</p>
+    <p class="price">170</p>
+    <span class="pack">100 gm</span>
+    <button class="additem"><a class="additema" href="#">Add To Cart</a></button>
+  </div>
+
+  <div class="cont">
+    <a href="#"><img class="imeg" src="Ashowgondha.png"></a>
+    <p class="name">Ashowgondha Powder</p>
+    <p class="price">350</p>
+    <span class="pack">100 gm</span>
+    <button class="additem"><a class="additema" href="#">Add To Cart</a></button>
+  </div>
+
+  <div class="cont">
+    <a href="#"><img class="imeg" src="Trifola-1.jpg"></a>
+    <p class="name">Trifola Powder</p>
+    <p class="price">175</p>
+    <span class="pack">100 gm</span>
+    <button class="additem"><a class="additema" href="#">Add To Cart</a></button>
+  </div>
+
+  <div class="cont">
+    <a href="#"><img class="imeg" src="Shimul_mul_2.jpg"></a>
+    <p class="name">Shimul Mul Powder</p>
+    <p class="price">145</p>
+    <span class="pack">100 gm</span>
+    <button class="additem"><a class="additema" href="#">Add To Cart</a></button>
+  </div>
+
+</section>
 </body>
 </html>
