--- a/signup.html
+++ b/signup.html
@@ -78,7 +78,7 @@
         <div class="form-group">
           <label for="password">Confirm Password:[<span style="color: red;">*</span>]</label>
           <input type="password" id="password" class="input-field" placeholder="Confirm Your Password" required>
-      </div>
+        </div>
       <div class="form-group" onsubmit="return validateCaptcha()">
         <label for="captcha-input">Enter CAPTCHA:[<span style="color: red;">*</span>]</label>
         <input class="input-field" type="text" id="captcha-input" placeholder="Please type the text" required>
@@ -89,14 +89,7 @@
         <button onclick="generateCaptcha()">Refresh CAPTCHA</button>
       </div>
 
-      <div class="form-group">
-      <input style="margin: 10px 10px;" type="checkbox" id="" name="">I read and agreed all <b>Trms and Conditions</b>
-      </div>
-
-      <div style="margin-left: 10px;">
-        <button class="submit" type="submit">Register</button>
-        <a style="margin-left: 8px;" href="login.html" target="_blank">Back to Login</a>
-      </div>
+      
 <script>
   let captchaCode = "";
 
@@ -126,6 +119,15 @@
   // Initialize CAPTCHA on page load
   window.onload = generateCaptcha;
 </script>
+   
+    <div class="form-group">
+      <input style="margin: 10px 10px;" type="checkbox" id="" name="" required>I read and agreed all <b>Trms and Conditions</b>
+      </div>
+
+      <div style="margin-left: 10px;">
+        <button class="submit" type="submit">Register</button>
+        <a style="margin-left: 8px;" href="login.html" target="_blank">Back to Login</a>
+      </div>
     </div>
 </form>
     
