--- a/index.html
+++ b/index.html
@@ -30,6 +30,26 @@
   <marquee>Welcome to my Website</marquee>
 </div>
 
+
+ <section class="cont">
+  <h2 class="about">About Us</h2>
+  <div class="para">
+    <p class="parag">
+    A man named <b>AFAZ UDDIN</b> was the first to these villagers the first idea about Aloe Vera and<br>
+    other medicinal plants and inspired them to engaging commercial farming. Ausdhi village with about <br>
+    15 villages of Laxmipur Kholabaria Union is located on the side of Dhaka-Rajshahi highway, 10 km east<br>
+    of Natore Sadar. The reason for naming the medicinal villages is that the farmers of these villages<br>
+    cultivate about 300 species of medicinal plants on a large scale in the vicinity of most of the <br>
+    agricultural lands especially in Aloe Vera. We <b>VESHOZ VILLAGE PRIVATE LIMITED</b> also LOCATED <br>
+    this Village........
+  </p>
+  <button class="seemore"><a class="read" href="about.html">Read More</a></button>
+  </div>
+<!-- <div>
+  <img src="Aloe_plant.jpg" height="200" width="200">
+</div> -->
+ </section>
+
 <section class="container">
   <h1 class="heading">Harbal Product</h1>
   <div class="cont">
@@ -64,13 +84,6 @@
     <button class="additem"><a class="additema" href="#">Add To Cart</a></button>
   </div>
 
-  <div class="cont">
-    <a href="#"><img class="imeg" src="Shimul_mul_2.jpg"></a>
-    <p class="name">Shimul Mul Powder</p>
-    <p class="price">145</p>
-    <span class="pack">100 gm</span>
-    <button class="additem"><a class="additema" href="#">Add To Cart</a></button>
-  </div>
 
 </section>
 </body>
